--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
-spring.security.user.name=Admin
-spring.security.user.password=Admin@123
+#spring.security.user.name=Admin
+#spring.security.user.password=Admin@123
 #jwt.secret=abcd123456789
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/securedbv2?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+server.port=9092
+
+# App Properties
+corpseed.app.jwtSecret= ======================BezKoder=Spring===========================
+corpseed.app.jwtExpirationMs=86400000
