resolved some issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,23 @@ spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-server.port=9092
+server.port=9990
 
 # App Properties
 corpseed.app.jwtSecret= ======================corpseed=Spring===========================
 corpseed.app.jwtExpirationMs=86400000
+
+#register with eureka and dynamic routing
+spring.instance.prefer-ip-address=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.server-url.defaultZone:http://localhost:8761/eureka
+management.endpoints.routes.enable=true
+management.endpoints.web.exposure.include=*
+
+springdoc.swagger-ui.path=/dashboard-documentation
+springdoc.api-docs.path=/dashboard-api-docs
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+corpseed.openapi.dev-url=http://localhost:9990
+corpseed.openapi.prod-url=https://dashboard-api.com
