--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.1.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>Spring-securityTest</artifactId>
+	<groupId>com.corpseed</groupId>
+	<artifactId>corpseed-security</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Spring-securityTest</name>
+	<name>corpseed-security</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
