--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,9 @@ server.port=9990
 corpseed.app.jwtSecret= ======================corpseed=Spring===========================
 corpseed.app.jwtExpirationMs=86400000
 
+spring.application.name=CORPSEED-SECURITY
+
+
 #register with eureka and dynamic routing
 spring.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
