--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,16 @@ springdoc.swagger-ui.tryItOutEnabled=true
 springdoc.swagger-ui.filter=true
 corpseed.openapi.dev-url=http://localhost:9990
 corpseed.openapi.prod-url=https://dashboard-api.com
+
+#mail sender 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+#spring.mail.username=kaushlendra.pratap@corpseed.com
+#spring.mail.password=mivr hicu idmm uvf
+#ozxn hhob mfvf fxwe
+spring.mail.username=aryan.chaurasia@corpseed.com
+spring.mail.password=ozxn hhob mfvf fxwe
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
