--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,30 @@
 #spring.security.user.name=Admin
 #spring.security.user.password=Admin@123
 #jwt.secret=abcd123456789
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/securedbv2?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.application.name=CORPSEED-SECURITY
 server.port=9990
 
+#Local Server 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/securitytest?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+
+#Prod Database
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://erpcorpflexi.mysql.database.azure.com:3306/aryansecure?useSSL=true
+spring.datasource.username=erpadmincorp
+spring.datasource.password=Password@1234
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # App Properties
 corpseed.app.jwtSecret= ======================corpseed=Spring===========================
 corpseed.app.jwtExpirationMs=86400000
 
-spring.application.name=CORPSEED-SECURITY
 
 
 #register with eureka and dynamic routing
@@ -40,8 +49,12 @@ spring.mail.port=587
 #spring.mail.username=kaushlendra.pratap@corpseed.com
 #spring.mail.password=mivr hicu idmm uvf
 #ozxn hhob mfvf fxwe
-spring.mail.username=aryan.chaurasia@corpseed.com
-spring.mail.password=ozxn hhob mfvf fxwe
+#spring.mail.username=aryan.chaurasia@corpseed.com
+#spring.mail.password=ozxn hhob mfvf fxwe
+spring.mail.username=erp@corpseed.com	
+#spring.mail.password=Navjot@545454
+spring.mail.password=tqvm uosl ffka injd
+
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
