--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,21 +5,13 @@ spring.application.name=CORPSEED-SECURITY
 server.port=9990
 
 #Local Server 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/securitytest?allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-
-#Prod Database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://erpcorpflexi.mysql.database.azure.com:3306/aryansecure?useSSL=true
-spring.datasource.username=erpadmincorp
-spring.datasource.password=Password@1234
+spring.datasource.url=jdbc:mysql://localhost:3306/securitytest?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 
 # App Properties
 corpseed.app.jwtSecret= ======================corpseed=Spring===========================
