--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.port=9990
 #============prod
 #prod database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://erpdatabasenew.mysql.database.azure.com:3306/dashlead?useSSL=true
+spring.datasource.url=jdbc:mysql://erpdatabasenew.mysql.database.azure.com:3306/securedbv2?useSSL=true
 spring.datasource.username=erpdb
 spring.datasource.password=corpseed#123
 spring.jpa.hibernate.ddl-auto=update
