--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,8 +45,7 @@ spring.mail.port=587
 #spring.mail.password=ozxn hhob mfvf fxwe
 spring.mail.username=erp@corpseed.com	
 #spring.mail.password=Navjot@545454
-spring.mail.password=tqvm uosl ffka injd
-
+spring.mail.password=dvft ybuc mofd nppf
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
