--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,21 @@ spring.application.name=CORPSEED-SECURITY
 server.port=9990
 
 #Local Server 
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://localhost:3306/securedbv2?allowPublicKeyRetrieval=true&useSSL=false
+# spring.datasource.username=root
+# spring.datasource.password=root
+# spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+# spring.jpa.hibernate.ddl-auto=update
+
+#prod database
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/securedbv2?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://corpseedweb.mysql.database.azure.com:3306/erpsecuredbv2?useSSL=false
+spring.datasource.username=corpseedweb
+spring.datasource.password=Corp@418K#
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
 # App Properties
@@ -23,7 +32,12 @@ corpseed.app.jwtExpirationMs=86400000
 spring.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.server-url.defaultZone:http://localhost:8761/eureka
+
+#local Eureka URL
+#eureka.client.server-url.defaultZone:http://localhost:8761/eureka
+
+# production eureka URL
+eureka.client.server-url.defaultZone:https://erpcorpseedeureka.azurewebsites.net/eureka
 management.endpoints.routes.enable=true
 management.endpoints.web.exposure.include=*
 
@@ -38,12 +52,12 @@ corpseed.openapi.prod-url=https://dashboard-api.com
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-#spring.mail.username=kaushlendra.pratap@corpseed.com
+#mailto:spring.mail.username=kaushlendra.pratap@corpseed.com
 #spring.mail.password=mivr hicu idmm uvf
 #ozxn hhob mfvf fxwe
-#spring.mail.username=aryan.chaurasia@corpseed.com
+#mailto:spring.mail.username=aryan.chaurasia@corpseed.com
 #spring.mail.password=ozxn hhob mfvf fxwe
-spring.mail.username=erp@corpseed.com	
+mailto:spring.mail.username=erp@corpseed.com	
 #spring.mail.password=Navjot@545454
 spring.mail.password=dvft ybuc mofd nppf
 
