--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,10 @@ server.port=9990
 
 #Local Server 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/securedbv2?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/finalerp2
+
+
+?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
@@ -45,7 +48,10 @@ spring.mail.port=587
 #spring.mail.password=ozxn hhob mfvf fxwe
 spring.mail.username=erp@corpseed.com	
 #spring.mail.password=Navjot@545454
-spring.mail.password=dvft ybuc mofd nppf
+spring.mail.password=hxmr jxza crev zajc
+
+
+
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
